@@ -36,6 +36,7 @@ Bugs fixed:
 - 2143287 Memory leak in getInstance up-call
 - 2192053 _methProvider return value not checked propery
 - 2168840 Fix various compiler warnings.
+- 2169807 XML parser does not handle all character references
 
 Changes in 1.3.2
 ================
